Fix Solitude Atmo

--- a/GameData/AfterKerbin/Scatterer/Planets/03_Solitude/atmo.cfg
+++ b/GameData/AfterKerbin/Scatterer/Planets/03_Solitude/atmo.cfg
@@ -1,4 +1,8 @@
-Scatterer_atmosphere
+@Scatterer_atmosphere:BEFORE[AK]
+{
+	!Atmo:HAS[#name[Kerbin]]{}
+}
+@Scatterer_atmosphere:FOR[AK]
 {
 	Atmo
 	{
