--- a/GameData/AfterKerbin/Scatterer/Planets/03_Solitude/ocean.cfg
+++ b/GameData/AfterKerbin/Scatterer/Planets/03_Solitude/ocean.cfg
@@ -1,9 +1,9 @@
-// @Scatterer_ocean:BEFORE[AK]
-// {
-// 	!Ocean:HAS[#name[Kerbin]]{}
-// }
-// @Scatterer_ocean:FOR[AK]
-Scatterer_ocean
+@Scatterer_ocean:BEFORE[AK]
+{
+	!Ocean:HAS[#name[Kerbin]]{}
+}
+@Scatterer_ocean:FOR[AK]
+//Scatterer_ocean
 {
 	Ocean
 	{
